##Text encoding: utf-8

2010-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: more work on phasing, but still not always 
	working.

2010-10-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/space-groups.xml.in: fixed group 104.
	* libs/gcu/spectrumdoc.cc: more work on phasing.

2010-10-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: load brackets.
	* libs/gcp/brackets.h: ditto.
	* libs/gcu/spectrumdoc.cc: more work on phasing.

2010-10-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: save brackets.
	* libs/gcp/brackets.h: ditto.
	* libs/gcu/spectrumdoc.cc: some work on NMR spectrum phasing.

2010-10-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* openbabel/babelserv.cc: start the server.
	* tests/Makefile.am: new test program.
	* tests/testbabelserver.c (main): ditto.

2010-10-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/object.cc: fixed crash in Object::Clear(). (Fredora #637564)

2010-10-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add new files.
	* libs/gcp/application.cc:  new gcp::Brackets class.
	* libs/gcp/brackets.cc: ditto.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/window.cc: enhanced recents file code.
	* libs/gcr/cleavagesdlg.cc: changed the grid creation signature.
	* libs/gcr/grid.cc: ditto.
	* libs/gcr/grid.h: ditto.
	* libs/gcu/application.cc: set dir after loading a file.
	* libs/gcu/spectrumdoc.cc: fixed FID transform.
	* plugins/loaders/nuts/nuts.cc: set some more properties.
	* programs/spectra/application.cc: enhanced recents file code.
	* programs/spectra/application.h: ditto.
	* programs/spectra/window.cc: ditto.

2010-10-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: make fourier transform really work.

2010-09-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: allays update cycles when loaded.
	* libs/gcu/spectrumdoc.cc: some work on FID transform using fft.