@@ -1,5 +1,8 @@
 ##Text encoding: utf-8
 
+2010-10-27  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcu/spectrumdoc.cc: phasing grossly works, needs refinement.
+
 2010-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcu/spectrumdoc.cc: more work on phasing, but still not always 
 	working.
